# anec.fun

./: .gitignore  README.md
.metals/: metals.lock.db  metals.mv.db
baton/gy-521 accelerometre/: accelerometre.ino  readme.md
boite/arduino/: NRF24L01Communication.ino  NRF24L01_Arduino.ino  arduino.ino
boite/communication/: NRF24Communication.scala
boite/main/: build.sbt
boite/main/.bsp/: sbt.json
box/arduino/: arduino.ino
box/main/: .gitignore  build.sbt
hotspot/: README.md  app.py  check_wifi.sh  hostapd.conf  setup.sh
hotspot/templates/: connect.html  index.html
hotspoter/: README.md  app.py  check_wifi.service  check_wifi.sh  hostapd.conf  package.json  pyproject.toml  setup.sh
hotspoter/static/: connect_style.css  styles.css
hotspoter/templates/: index.html
microphone/ReceiveMicData/: ReceiveMicData.ino
microphone/TransmitMicData/: RF24Audio.cpp  RF24Audio.h  TransmitMicData.ino  userConfig.h
mobile-app/: .gitignore  README.md  pubspec.yaml  test.sh
mobile-app/android/app/: build.gradle
mobile-app/anecdotfun/: README.md  pubspec.yaml
mobile-app/anecdotfun/windows/: CMakeLists.txt
mobile-app/lib/: main.dart
mobile-app/linux/: CMakeLists.txt  my_application.cc
mobile-app/web/: index.html  manifest.json
python-client/: .gitignore  main.py
server/: .gitignore  README.md  WebSocketTest.http  build.sbt  compose.yml
server/.bsp/: sbt.json
server/project/: plugins.sbt
server_2/anectdot-server/: .gitignore  .scalafix.conf  README.md  build.sbt
server_2/python-client/: main.py
stick/gy-521 accelerometre/: readme.md
(+97 files in other folders)
