[project]
name = "hotspoter"
version = "0.1.0"
description = "Default template for PDM package"

dependencies = []
requires-python = ">=3.12,<3.13"
readme = "README.md"

[tool.ruff]
line-length = 127
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
select = [
  # pydocstyle
  "D",
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-annotation
  "ANN",
  # flake8-unused-arguments
  "ARG",
  # flake8-bugbear
  "B",
  # flake8-print
  "T20",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # perflint
  "PERF",
  # mccabe
  "C90",
  # eradicate
  "ERA",
  # pep8-naming
  "N",
]
ignore = [
  # pydocstyle
  "D203",
  "D213",
  "D104",
  "D107",
  "D401",
]
exclude = ["tests/**"]